tests/errors/builtin-no-annotation/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0128]: `built-in` requires a type annotation on the enclosing `def`.
  │
  ├─𜱶 help: write `def name :: <type> = built-in "tag"`.
  │
1 │ def length = built-in "list-length"
  │              ^^^^^^^^^^^^^^^^^^^^^^
  ╰─𜱶 tests/errors/builtin-no-annotation/main.pa:1:14
